# incr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/incr-cli/: Cargo.toml
crates/incr-cli/src/: main.rs
crates/incr-cli/src/commands/: batch.rs  config.rs  mod.rs  models.rs  process.rs
crates/incr-core/: Cargo.toml
crates/incr-core/src/: error.rs  lib.rs
crates/incr-core/src/invoice/: mod.rs  parser.rs
crates/incr-core/src/invoice/rules/: amounts.rs  dates.rs  iban.rs  mod.rs  nip.rs  patterns.rs  regon.rs  vat.rs
crates/incr-core/src/models/: config.rs  embedded.rs  invoice.rs  mod.rs
crates/incr-core/src/ocr/: classifier.rs  detector.rs  engine.rs  layout.rs  mod.rs  preprocessing.rs  pure_engine.rs  recognizer.rs  table.rs
crates/incr-core/src/pdf/: extractor.rs  mod.rs
crates/incr-inference/: Cargo.toml
crates/incr-inference/src/: error.rs  lib.rs  tensor.rs
crates/incr-inference/src/backend/: mod.rs  ort.rs  tract.rs
crates/incr-wasm/: Cargo.toml
crates/incr-wasm/src/: lib.rs
