[workspace]
resolver = "2"
members = [
    "crates/incr-core",
    "crates/incr-inference",
    "crates/incr-cli",
    "crates/incr-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["incr contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/incr"
rust-version = "1.85"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
image = "0.25"
ndarray = "0.16"
tracing = "0.1"

# PDF
lopdf = "0.35"
pdf-extract = "0.8"

# ONNX inference
ort = "2.0.0-rc.11"
tract-onnx = "0.21"

# CLI
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Testing
pretty_assertions = "1.4"

# Pure Rust OCR
pure-onnx-ocr = "0.1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"

