[package]
name = "incr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI application for Polish invoice OCR processing"

[[bin]]
name = "incr"
path = "src/main.rs"

[dependencies]
incr-core = { path = "../incr-core", features = ["native"] }

# CLI
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Output formats
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }

# Progress & display
indicatif = "0.17"
console = "0.15"

# File handling
glob = "0.3"
dirs = "5.0"
image.workspace = true
chrono.workspace = true

# Downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
