[package]
name = "incr-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ONNX inference abstraction layer for incr - supports ort (native) and tract (WASM)"

[features]
default = ["native"]
native = ["dep:ort"]
wasm = ["dep:tract-onnx"]

[dependencies]
# Core
thiserror.workspace = true
ndarray.workspace = true
tracing.workspace = true

# ONNX backends
tract-onnx = { workspace = true, optional = true }

[dependencies.ort]
version = "2.0.0-rc.11"
optional = true
default-features = false
features = ["xnnpack"]

[dev-dependencies]
pretty_assertions.workspace = true