[package]
name = "incr-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for Polish invoice OCR"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
incr-core = { path = "../incr-core", default-features = false, features = ["wasm"] }

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Blob",
    "File",
    "FileReader",
    "ImageData",
] }

serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
